syntax = "proto3";

package auth;

service AuthService {
  rpc LoginUser (AuthData) returns (AccessToken) {}
  rpc GetUser (GetUserData) returns (User) {}
}

message Token {
  string token = 1; 
}

message AuthData {
    string email = 1;
    string password = 2;
}

message AccessToken {
    string access_token = 1;
}

message GetUserData {
  string email = 1;
  Token token = 2;
}

message User {
  int32 id = 1;
  string email = 2;
  string name = 3;
}



